--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 # AURA Voice AI - Python Requirements
-# Week 3-4: Added memory system dependencies
+# Week 5-6: Added voice processing dependencies
 
 # Core Framework
 fastapi==0.104.1
@@ -16,18 +16,22 @@ openai==1.3.0
 httpx==0.25.0
 
 # Memory System (Week 3-4)
-redis[hiredis]==5.0.1  # Redis client with C parser for speed
+redis[hiredis]==5.0.1
 asyncio==3.4.3
+
+# Voice Processing (Week 5-6)
+elevenlabs==0.2.26  # Text-to-speech
+# Note: Whisper uses OpenAI API, no extra package needed
 
 # Utilities
 python-dateutil==2.8.2
 
-# Future additions:
-# Week 5-6: Voice Processing
-# elevenlabs==0.2.26
+# Optional: For local audio processing (not needed for API-based approach)
 # sounddevice==0.4.6
 # numpy==1.24.3
+# scipy==1.11.4
 
+# Future additions:
 # Week 13-14: Social Media
 # google-api-python-client==2.108.0
 # tweepy==4.14.0
