--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+websockets==12.0
 
 # Configuration
 pydantic==2.5.0
@@ -25,6 +26,9 @@ asyncio==3.4.3
 
 # Voice processing
 elevenlabs==0.2.26
+webrtcvad==2.0.10
+numpy==1.24.3
+scipy==1.11.4
 
 # Document processing
 PyPDF2==3.0.1
@@ -34,7 +38,6 @@ aiofiles==23.2.1
 
 # AI and ML
 tiktoken==0.5.1
-numpy==1.24.3
 scikit-learn==1.3.2
 
 # Utilities
