--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,20 @@
 # Python dependencies for AURA Voice AI
 
 # Web framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+fastapi==0.115.0
+uvicorn[standard]==0.30.0
+python-multipart==0.0.9
 websockets==12.0
 
 # Configuration
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic==2.8.0
+pydantic-settings==2.5.2
 python-dotenv==1.0.0
 
 # API clients
-openai==1.3.0
-httpx==0.25.0
+openai==1.35.0
+httpx==0.24.1
+supabase==2.3.0
 
 # Authentication
 PyJWT==2.8.0
@@ -23,6 +24,7 @@ passlib[bcrypt]==1.7.4
 # Memory and caching
 redis[hiredis]==5.0.1
 asyncio==3.4.3
+anyio==3.7.1
 
 # Voice processing
 elevenlabs==0.2.26
