DigitalOcean Deployment Ready - Fixed localhost issues and added production config
 Changes:
- Updated CORS origins to include DigitalOcean IP (157.245.192.221)
- Fixed uvicorn host binding to 0.0.0.0 (not localhost)
- Updated Redis configuration for DigitalOcean deployment
- Fixed requirements.txt pyaudio installation issue
- Added deployment scripts for Windows (.bat) and Linux (.sh)
- Updated domain references to iaura.com
- Added comprehensive DigitalOcean deployment documentation

 Production URLs:
- API: http://157.245.192.221:8000
- Health: http://157.245.192.221:8000/health
- Test UI: http://157.245.192.221:8000/test
- WebSocket: ws://157.245.192.221:8000/ws/voice/continuous

 Ready for DigitalOcean deployment!

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
 # Python dependencies for AURA Voice AI
 
+# Core audio requirements
+pyaudio==0.2.11
+pygame==2.5.2  # For better audio playback
+
 # Web framework
 fastapi==0.115.0
 uvicorn[standard]==0.30.0
